fix the scroll bug to hide the horizontal scroll of steedos admin content

--- a/packages/steedos-admin/client/layout/master.less
+++ b/packages/steedos-admin/client/layout/master.less
@@ -1,5 +1,6 @@
 .steedos-admin{
     .admin-content{
+        overflow-x: hidden;
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
         top: 51px;
